tests/NormalTests/paczka1/fuzzy1/47830072.err
Error in line 6: 1sN1 A809 51,2
Error in line 3: Wqts5YagE A948 91,0
Error in line 10: A809 A228 453,4
Error in line 36: GcdTwt A228 352,78
